[package]
name = "oh_hell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = [
  "json",
  "rustls-tls",
], default-features = false }
jsonwebtoken = "9.3.0"
